all working part is completed

--- a/templates/template1.html
+++ b/templates/template1.html
@@ -1,5 +1,6 @@
-<h1 style="color: #333;">Welcome to Our Service!</h1>
-<p>Hello [User],</p>
-<p>We are excited to have you on board. Here are some features...</p>
-<p>Best Regards,</p>
-<p><strong>The Team</strong></p>
+<h1 style="color: #333;">Welcome to Our Service!</h1><p>
+</p><p>Hello [User],</p><p>
+</p><p>We are excited to have you on board. Here are some features...</p><p>
+</p><p>Best Regards,</p><p>
+</p><p><strong>The Team reagrds from naren and <em><u>family</u></em></strong></p><p>
+</p>
