--- a/public/styles.css
+++ b/public/styles.css
@@ -22,6 +22,11 @@ h1 {
     gap: 20px;
     padding: 20px;
 }
+.controls {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-evenly;
+}
 .text h3 {
     font-size: 30px ;
     text-align:center ;
